--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "zeppelin-solidity": "^1.5.0"
+    "zeppelin-solidity": "^1.5.0",
+    "web3": "^0.20.5"
   }
 }
