adding frontend files

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lite-server": "^2.3.0"
   },
   "dependencies": {
-    "zeppelin-solidity": "^1.5.0",
-    "web3": "^0.20.5"
+    "truffle-hdwallet-provider": "0.0.3",
+    "web3": "^0.20.5",
+    "zeppelin-solidity": "^1.5.0"
   }
 }
